--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <p><a href="./recipes/brownies.html" target="_blank"></a></p>
     </body>
 </html>
