Text Structure Edit to homepage

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <p><a href="./recipes/brownies.html" target="_blank"></a></p>
+        <p><h2>List of Recipes</h2></p>
+        <ul>
+            <li><p><a href="./recipes/brownies.html" target="_blank">Brownies Recipe</a></p></li>
+        </ul>
+        
     </body>
 </html>
