--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -8,5 +8,6 @@
 
     <body>
         <h1>Brownies</h1>
+        <img src="../images/brownies.jpeg" alt="Brownies Image" height="500" width="500">
     </body>
 </html>
