--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -9,5 +9,39 @@
     <body>
         <h1>Brownies</h1>
         <img src="../images/brownies.jpeg" alt="Brownies Image" height="500" width="500">
+
+        <h2>Description</h2>
+        <p1>These vegan brownies are made with cocoa powder and are somewhat simple to make.</p1>
+
+        <h2>Ingredients</h2>
+        <p>Here is a list of ingredients you will need</p>
+        <ul>
+            <li>All purpose flour - 2 cups</li>
+            <li>Sugar - 2 cups</li>
+            <li>Cocoa Powder - 3/4 cup</li>
+            <li>Baking Powder - 1 teaspoon</li>
+            <li>Salt - 3/4 teaspoon</li>   
+            <li>Water or coffee - 1 cup</li>
+            <li>Vegetable Oil - 1/2 cup</li>
+            <li>Vanilla Extract - 2 teaspoons</li>
+
+        </ul>
+
+        <h2>Steps</h2>
+        <ol>
+            <p><strong>Step 1</strong></p>
+            <li>Preheat the oven to 350 degrees F (175 degrees C). Grease a 9x13 inch baking dish with baking spray; line bottom with parchment paper</li>
+            
+            <p><strong>Step 2</strong></p>
+            <li>Whisk flour, sugar, cocoa powder, baking powder, and salt together in a large bowl until combined.</li>
+
+            <p><strong>Step 3</strong></p>
+            <li>Pour in water (or coffee), vegetable oil, and vanilla; mix until well-blended. Spread batter evenly in the prepared dish.</li>
+
+            <p><strong>Step 4</strong></p>
+            <li>Bake in the preheated oven until top is no longer shiny and center feels just set when gently pressed, about 30 minutes. Let cool for at least 10 minutes before cutting into 15 squares.</li>
+        </ol>
+
+
     </body>
 </html>
