Added ingredients and directions in banana bread page

--- a/recipes/bananabread.html
+++ b/recipes/bananabread.html
@@ -9,6 +9,31 @@
 
     <body>
         <h1>Banana Bread</h1>
-        
+        <img src="../images/bananabread.jpeg" alt="Banana Bread Picture" height="500" width="500">
+
+        <h2>Description</h2>
+        <p>This is the best banana bread recipe. It is chunky hehe</p>
+
+        <h2>Ingredients</h2>
+        <ul>
+            <li>White Sugar - 1 cup</li>
+            <li>Margarine, softened - 1/2 cup</li>
+            <li>Eggs - 2x</li>
+            <li>Mashed banana - 1 1/2 cups</li>
+            <li>All purpose flour - 2 cups</li>
+            <li>Baking soda - 1 teaspoon</li>
+
+        </ul>
+
+        <h2>Steps</h2>
+        <ol>
+            <li>Preheat the oven to 350 degrees F (175 degrees C). Grease and flour a 9x5-inch loaf pan.</li>
+
+            <li>Beat sugar and margarine in a bowl until smooth. Beat in eggs, then bananas. Add flour and baking soda, stirring just until combined. Pour into the prepared pan.</li>
+
+            <li>Bake in the preheated oven until a toothpick in the center comes out clean, about 1 hour. Remove from the pan and let cool.</li>
+
+            <li>Store in the refrigerator or freeze.</li>
+        </ol>
     </body>
 </html>
