Adding styles to cupcake page

--- a/recipes/cupcake.html
+++ b/recipes/cupcake.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Cupcake Recipe</title>
+        <link rel="stylesheet" href="../css-files/styles.css">
     </head>
 
     <body>
